# grove

./: Cargo.toml  Makefile  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/plans/: 2026-03-08-grove-design.md  2026-03-08-grove-implementation.md  2026-03-08-grove-implementation.md.tasks.json  2026-03-08-lazygit-and-cache.md  2026-03-08-lazygit-and-cache.md.tasks.json  2026-03-08-responsive-columns.md  2026-03-08-tree-view-plan.md
src/: cache.rs  config.rs  git.rs  lib.rs  main.rs  model.rs  scanner.rs  static_output.rs
src/tui/: actions.rs  mod.rs  tree.rs  ui.rs
