[package]
name = "grove"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/alexbartok/grove"
description = "Scans for git repos and shows which ones have uncommitted or unpushed work"
license = "MIT"
homepage = "https://github.com/alexbartok/grove"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.28"
git2 = "0.19"
ratatui = "0.29"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
